--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cryptodb
+#spring.datasource.url=jdbc:postgresql://localhost:5432/cryptodb
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CryptoDbContext
 spring.datasource.username=matthew
 spring.datasource.password=matthew
 spring.jpa.hibernate.ddl-auto=update
 
-#784caf04-f15b-44bf-b2a2-b03265f8dc46
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
